# mantistable-4

./: .gitattributes
CTA/: .gitignore  CTA.py  README.txt  candidates_cta.json  cta.csv  generate_candidates_cta.py
django/: .gitignore
django/api/: my_tasks.py
django/api/process/cea/: linkage.py
django/api/process/utils/lamapi/: my_wrapper.py
django/evaluation/: .gitignore  main.py  post_process.py
django/mantistable/: settings.py
django/media/: .gitignore  candidates.index  candidates.map
mantistable_baseline/: README.md  pyproject.toml
mantistable_baseline/mantistable_baseline/: gen_data.py  main.py  post_process.py
