[tool.poetry]
name = "mantistable_baseline"
version = "2.0.2"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.2"
sem-desc = "~3.5.2"
kgdata = "^2.3.1"
isbnlib = "^3.10.10"
datatypes-validator = {url = "https://bitbucket.org/Cilium/datatype-validator/get/0.4.2.tar.gz"}
editdistance = "^0.6.0"
PyYAML = "^6.0"
nltk = "^3.7"
aiohttp = "^3.8.1"
networkx = "^2.8.2"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
